--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,12 @@
         "src": "server.js",
         "use": "@vercel/node"
       }
+    ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/server.js"
+      }
     ]
   }
   
