--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
+
+  
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/server.js"
-      }
+    "builds": [{
+    "src": "./server.js",
+    "use": "@now/node-server"
+    }],
+    "routes": [{"handle": "filesystem"},
+    {
+    "src": "/.*",
+    "dest": "server.js"
+    }
     ]
-  }
-  
+    }
