--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,8 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [
-      {
-        "handle": "filesystem"
-      },
+    "Router": [
+     
       {
         "src": "/.*",
         "dest": "server.js"
