--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "saman.com",
+  "name": "project2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
   "start": "node server.js",
   "dev": "nodemon server.js",
   "build": "echo 'No build step required for node.js app'"
+},
+"engines": {
+  "node": "20.17.0"
 },
   "keywords": [],
   "author": "",
