--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "build": "echo 'No build step required for node.js app'"
-},
+ "scripts": {
+    "start": "concurrently \"npm run dev\"",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required for node.js app'"
+  },
 "engines": {
   "node": "20.17.0"
 },
