--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "server.js",
   "type": "module",
  "scripts": {
-    "start": "concurrently \"npm run dev\"",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required for node.js app'"
-  },
+  "start": "nodemon server-api/server.js",
+  "server": "nodemon server-api/server.js",
+  "client": "npm run dev --prefix client-ui",
+  "app": "npm run client && npm run server"
+},
+
 "engines": {
   "node": "20.17.0"
 },
