Your commit message

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,16 @@
         "src": "/.*",
         "dest": "server.js"
       }
-    ]
+    ],
+    
+      "rewrites": [
+        {
+          "source": "/(.*)",
+          "destination": "/index.html"
+        }
+      ]
+    
   }
+  
+ 
   
